fix: pad taking too much space

--- a/src/main/resources/drumtice.css
+++ b/src/main/resources/drumtice.css
@@ -82,8 +82,8 @@ body {
 }
 
 .padButtonClass {
-    width: 130px;
-    height: 130px;
+    width: 110px;
+    height: 110px;
 }
 
 #scoreText, #mistakesText, #detectedText {
